- Modify favicon setting - Display fallback title in post navigation - Fix post share box z-index - Fix category count style

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -214,6 +214,7 @@
   border-radius: 3px
   margin-left: -145px
   overflow: hidden
+  z-index: 1
   &.on
     display: block
 
